[package]
name = "wbpros_youtube_downloader"
version = "2.5.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = 0
lto = "thin"
panic = "abort"
opt-level = 3

[dependencies]
reqwest = "0.11.23"
rusty_ytdl = "0.6.6"
sanitize-filename = "0.5.0"
tokio = { version = "1.35.1", features = ["full"] }

[package.metadata.scripts]
run_debug = "cargo run dev"
build_debug = "cargo build dev"

run_release = "cargo run release"
build_release = "cargo build --relese"

upadate_deps = "cargo build"

